# rustlog

./: Cargo.toml  README.md
data/: config.toml
data/easylog_configs/: Android.config.toml  Apache.config.toml  BGL.config.toml  HDFS.config.toml  HPC.config.toml  Hadoop.config.toml  HealthApp.config.toml  Linux.config.toml  Mac.config.toml  OpenSSH.config.toml  OpenStack.config.toml  Proxifier.config.toml  Spark.config.toml  Thunderbird.config.toml  Windows.config.toml  Zookeeper.config.toml
src/: cli.rs  data_model.rs  dataset.rs  easylog.rs  evaluator.rs  log_parser.rs  main.rs  utils.rs
src/cli/: args.rs  commands.rs
src/dataset/: android_dataset.rs  loghub_common_dataset.rs  raw_text_dataset.rs
src/log_parser/: easylog.rs
