[package]
name = "rustlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
csv = "*"
chrono = "*"
fancy-regex = "*"
tqdm = "*"
log = "*"
simplelog = "*"
toml = "*"
serde = {version = "*", features = ["derive"]}
clap = {version = "*", features = ["derive"]}
colored = "*"
counter = "*"